# diana-dasm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-build.sh  cmake-test.sh
spec/new/: newcmd.txt
src/: CMakeLists.txt  diana_7_1.sln  orthia_14_0.sln  orthia_9_0.sln  orthia_disasm_14_0.sln  orthia_kext_9_0.sln  start_orthia_kernel.cmd  start_with_kit10.cmd  start_with_kit10_10586.cmd  start_with_kit10_10586_14.cmd  start_with_kit10_17763_14.cmd  start_with_kit10_22621_14.cmd  start_with_kit81.cmd  start_with_kit81_14.cmd  wdk_build.cmd
src/diana_core/: CMakeLists.txt
src/diana_core/diana_core/: CMakeLists.txt  diana_analyze.c  diana_analyze.h  diana_analyze2.c  diana_analyze2.h  diana_apply_config_rules.h  diana_commands.h  diana_config.h  diana_core.c  diana_core.h  diana_core.vcproj  diana_core_14_0.vcxproj  diana_core_14_0.vcxproj.filters  diana_core_9_0.vcproj  diana_core_cpp.h  diana_core_parsers.c  diana_core_utils.c  diana_core_win32_context.c  diana_core_win32_context.h  diana_custom_config.inc  diana_disable_warnings.h  diana_gen.c  diana_list.c  diana_list.h  diana_operands.c  diana_pdb.c  diana_pdb.h  diana_pe.c  diana_pe.h  diana_pe_analyzer.c  diana_pe_analyzer.h  diana_pe_cpp.h  diana_pe_defs.h  diana_processor_cpp.h  diana_stack.c  diana_streams.c  diana_streams.h  diana_tables_16.c  diana_tables_common.c  diana_text_output_masm.c  (+7 more)
src/diana_core/diana_core/diana_patchers/: diana_ultimate_patcher.c  diana_ultimate_patcher.h  diana_ultimate_patcher_64.c
src/diana_core/diana_core/diana_processor/: ReadMe.txt  diana_proc_gen.h  diana_processor_cmd_b.c  diana_processor_cmd_c.c  diana_processor_cmd_c.h  diana_processor_cmd_d.c  diana_processor_cmd_fpu.c  diana_processor_cmd_fpu.h  diana_processor_cmd_fpu_internal.c  diana_processor_cmd_fpu_internal.h  diana_processor_cmd_fpu_sse.c  diana_processor_cmd_fpu_sse.h  diana_processor_cmd_i.c  diana_processor_cmd_imul.c  diana_processor_cmd_internal.c  diana_processor_cmd_j.c  diana_processor_cmd_l.c  diana_processor_cmd_m.c  diana_processor_cmd_m_xmm.c  diana_processor_cmd_m_xmm.h  diana_processor_cmd_n.c  diana_processor_cmd_p.c  diana_processor_cmd_r.c  diana_processor_cmd_r.h  diana_processor_cmd_s.c  diana_processor_cmd_s2.c  diana_processor_commands.c  diana_processor_context.c  diana_processor_context.h  diana_processor_core.c  diana_processor_core.h  diana_processor_core_impl.c  diana_processor_core_impl.h  diana_processor_core_impl_xmm.c  diana_processor_core_impl_xmm.h  diana_processor_impl_init.h  diana_processor_specific_xmm.h  diana_processor_win32_context.c  diana_processor_win32_context.h
src/diana_core/diana_core/diana_processor/softfloat/: softfloat-macros.h  softfloat.c  softfloat.h
src/diana_core/diana_core/libpdb/: pdb.c  pdb.h
src/diana_core/diana_core/libpdb/pdb/: dbistream.h  msf.h  pdbstream.h
src/diana_core/diana_core_tests/: CMakeLists.txt  diana_core_tests.vcproj  diana_core_tests_14_0.vcxproj  diana_core_tests_9_0.vcproj  test_add.cpp  test_analyze.cpp  test_call.cpp  test_cmp.cpp  test_common.h  test_fpu_mmx32.cpp  test_imul.cpp  test_integrated.cpp  test_jmp.cpp  test_lea.cpp  test_masm1.cpp  test_mov.cpp  test_mov2.cpp  test_mov_as.cpp  test_mov_spec.cpp  test_new.cpp  test_or.cpp  test_patchers.cpp  test_processor_impl.h  test_push.cpp  test_stack.cpp  test_suxx.cpp  test_x64.cpp  test_x64_integrated.cpp
src/diana_core/diana_processor_tests/: CMakeLists.txt  diana_processor_tests.vcproj  diana_processor_tests_14_0.vcxproj  main.cpp  test_processor.cpp  test_processor_a.cpp  test_processor_b.cpp  test_processor_c.cpp  test_processor_call.cpp  test_processor_d.cpp  test_processor_flags.cpp  test_processor_fpu.cpp  test_processor_fpu_integration.cpp  test_processor_fpu_sse.cpp  test_processor_i.cpp  test_processor_impl.h  test_processor_j.cpp  test_processor_l.cpp  test_processor_m.cpp  test_processor_m_xmm.cpp  test_processor_n.cpp  test_processor_o.cpp  test_processor_r.cpp  test_processor_s.cpp  test_processor_x.cpp
src/diana_win/di_dumper/: dd_hook.cpp  dd_hook.h  dd_link.cpp  dd_link.h  dd_list.h  dd_out.cpp  dd_out.h  dd_process_utils.cpp  dd_process_utils.h  di_dumper.vcproj  main.cpp  (+1 more)
(+233 files in other folders)
