project(diana_core)


include_directories(".")
include_directories("./diana_patchers")
include_directories("./diana_processor")
include_directories("./diana_processor/softfloat")

# Create shared library
add_library(${PROJECT_NAME} SHARED 
diana_allocators.c
diana_analyze.c
diana_analyze2.c
diana_core.c
diana_core_gen_tags.c
diana_core_parsers.c
diana_core_utils.c
diana_core_win32_context.c
diana_gen.c
diana_list.c
diana_operands.c
diana_patchers.c
diana_pe.c
diana_pe_analyzer.c
diana_stack.c
diana_streams.c
diana_stream_proxy.c
diana_tables_16.c
diana_tables_32.c
diana_tables_common.c
diana_text_output_masm.c
diana_uids.c
diana_win32.c
diana_win32_executable_heap.c
diana_win32_sys_memcpy.c

diana_patchers/diana_ultimate_patcher.c
diana_patchers/diana_ultimate_patcher_32.c
diana_patchers/diana_ultimate_patcher_64.c
diana_patchers/diana_ultimate_patcher_impl.c

diana_processor/diana_processor_cmd_a.c
diana_processor/diana_processor_cmd_b.c
diana_processor/diana_processor_cmd_c.c
diana_processor/diana_processor_cmd_d.c
diana_processor/diana_processor_cmd_fpu.c
diana_processor/diana_processor_cmd_fpu_internal.c
diana_processor/diana_processor_cmd_fpu_sse.c
diana_processor/diana_processor_cmd_i.c
diana_processor/diana_processor_cmd_imul.c
diana_processor/diana_processor_cmd_internal.c
diana_processor/diana_processor_cmd_internal_xmm.c
diana_processor/diana_processor_cmd_j.c
diana_processor/diana_processor_cmd_l.c
diana_processor/diana_processor_cmd_l_xmm.c
diana_processor/diana_processor_cmd_m.c
diana_processor/diana_processor_cmd_m_xmm.c
diana_processor/diana_processor_cmd_n.c
diana_processor/diana_processor_cmd_p.c
diana_processor/diana_processor_cmd_r.c
diana_processor/diana_processor_cmd_s.c
diana_processor/diana_processor_cmd_s2.c
diana_processor/diana_processor_commands.c
diana_processor/diana_processor_context.c
diana_processor/diana_processor_core.c
diana_processor/diana_processor_core_impl.c
diana_processor/diana_processor_core_impl_xmm.c
diana_processor/diana_processor_streams.c
diana_processor/diana_processor_win32_context.c

diana_processor/softfloat/softfloat-muladd.c
diana_processor/softfloat/softfloat-round-pack.c
diana_processor/softfloat/softfloat-specialize.c
diana_processor/softfloat/softfloat.c
diana_processor/softfloat/softfloat16.c
diana_processor/softfloat/softfloatx80.c

)

set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE C)

